force-app/main/default/objects/Sansan_CI__AutoPromotionLeadResult__c/Sansan_CI__AutoPromotionLeadResult__c.object-meta.xml
<CustomObject>
    <label>リード自動昇格結果</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>リード自動昇格結果</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>