force-app/main/default/objects/Sansan_CI__AutoPromotionLeadResult__c/fields/Sansan_CI__AutoPromotionLeadConDuplicateErrorNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadConDuplicateErrorNum__c</fullName>
    <label>リード自動昇格取引先責任者重複エラー件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>