force-app/main/default/objects/Sansan_CI__AutoPromotionLeadResult__c/fields/Sansan_CI__AutoPromotionLeadSuccessNum__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__AutoPromotionLeadSuccessNum__c</fullName>
    <label>リード自動昇格成功件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>